# tts-lib

./: .gitignore  CMakeLists.txt  LICENSE  ParameterBuilder.cpp  README.md  TtsService.cpp
doc/: classDiagram.wsd
google/: GoogleTts.cpp  GoogleTts.h
http/: RestfulClient.cpp  RestfulClient.h
include/: TtsService.h
test/: CMakeLists.txt  tts-test.cpp
test/lib/darwin/arm64/: libtts.dylib
